kubernetes/kafka-brocker.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  labels:
    app: kafka-broker
spec:
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
    - port: 29092
      targetPort: 29092
      protocol: TCP
  clusterIP: None
  selector:
    app: kafka-broker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-broker
spec:
  selector:
    matchLabels:
      app: kafka-broker
  serviceName: "kafka-broker"
  replicas: 3
  minReadySeconds: 1
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: kafka-broker
        image: confluentinc/cp-kafka:7.4.0
        ports:
          - containerPort: 9092
            name: broker
          - containerPort: 29092
            name: internal
        command:
          - sh
          - -c
          - |
            HOSTNAME=$(hostname)
            NODE_ID=$(echo $HOSTNAME | sed 's/kafka-broker-//')
            export KAFKA_BROKER_ID=$NODE_ID
            export KAFKA_NODE_ID=$NODE_ID
            export KAFKA_LISTENERS="PLAINTEXT://$HOSTNAME:9092,PLAINTEXT_INTERNAL://$HOSTNAME:29092"
            export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://$HOSTNAME:9092,PLAINTEXT_INTERNAL://$HOSTNAME:29092"
            /etc/confluent/docker/run
        volumeMounts:
          - name: kafka-data
            mountPath: /var/lib/kafka/data

  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "hostpath"
      resources:
        requests:
          storage: 1Gi
